# nano-kws

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
assets/: README.md  aug_ablation_table.md  benchmark_table.md  ds_cnn_small_fp32.label_map.json  ds_cnn_small_fp32.onnx  ds_cnn_small_int8.onnx  ds_cnn_small_qat_fp32.onnx  ds_cnn_small_qat_int8.onnx  ds_cnn_w0p5.history.json  ds_cnn_w0p5.pt  ds_cnn_w0p5_qat.history.json  ds_cnn_w0p5_qat.pt  few_shot_table.md  microbench_table.md  sweep_table.json  sweep_table.md
cpp/: CMakeLists.txt  README.md  infer.cpp
cpp/microbench/: CMakeLists.txt  README.md  conv_kernels.c  conv_kernels.h
docs/: README.md
nano_kws/: __init__.py  benchmark.py  config.py  evaluate.py  export_onnx.py  infer.py  qat.py  quantize.py  streaming.py  train.py
nano_kws/data/: __init__.py  augment.py  features.py  speech_commands.py
nano_kws/models/: ds_cnn.py
notebooks/: README.md
scripts/: aug_ablation.py  conv_microbench.py  download_data.py  few_shot.py  keep_awake.py  sweep_sizes.py
tests/: conftest.py  test_aug_ablation.py  test_augment.py  test_benchmark_smoke.py  test_config.py  test_conv_microbench.py  test_export_onnx.py  test_features.py  test_few_shot.py  test_infer.py  test_model.py  test_qat.py  test_quantize.py  test_speech_commands.py  test_streaming.py  test_sweep_smoke.py
